# paralela-2

./: .gitignore  CMakeLists.txt
include/: FileTransfer.h  ThreadPool.h
src/: Client.cpp  FileNode.cpp  FileTransfer.cpp  Server.cpp  ThreadPool.cpp
